[tool.poetry]
name = "hunters-jukebox"
version = "0.1.0"
description = ""
authors = ["Bryce Clark <bryce@lowquality.dev>"]
readme = "README.md"
packages = [{include = "hunters_jukebox"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
